syntax = "proto3";

package IvionOnline;

import "Type.proto";
import "Class.proto";

message Boolean_Set_Mutation
{
    ObjectPath Path = 1;
    Boolean NewValue = 2;
    Boolean OldValue = 3;
}

message List_Boolean_Insert_Mutation
{
    ObjectPath Path = 1;
    Boolean NewValue = 2;
    int32 Index = 3;
}

message List_Boolean_Remove_Mutation
{
    ObjectPath Path = 1;
    Boolean OldValue = 2;
    int32 Index = 3;
}
message Integer_Set_Mutation
{
    ObjectPath Path = 1;
    Integer NewValue = 2;
    Integer OldValue = 3;
}

message List_Integer_Insert_Mutation
{
    ObjectPath Path = 1;
    Integer NewValue = 2;
    int32 Index = 3;
}

message List_Integer_Remove_Mutation
{
    ObjectPath Path = 1;
    Integer OldValue = 2;
    int32 Index = 3;
}
message Vec2i_Set_Mutation
{
    ObjectPath Path = 1;
    Vec2i NewValue = 2;
    Vec2i OldValue = 3;
}

message List_Vec2i_Insert_Mutation
{
    ObjectPath Path = 1;
    Vec2i NewValue = 2;
    int32 Index = 3;
}

message List_Vec2i_Remove_Mutation
{
    ObjectPath Path = 1;
    Vec2i OldValue = 2;
    int32 Index = 3;
}
message Terrain_Set_Mutation
{
    ObjectPath Path = 1;
    Terrain NewValue = 2;
    Terrain OldValue = 3;
}

message List_Terrain_Insert_Mutation
{
    ObjectPath Path = 1;
    Terrain NewValue = 2;
    int32 Index = 3;
}

message List_Terrain_Remove_Mutation
{
    ObjectPath Path = 1;
    Terrain OldValue = 2;
    int32 Index = 3;
}
message Color_Set_Mutation
{
    ObjectPath Path = 1;
    Color NewValue = 2;
    Color OldValue = 3;
}

message List_Color_Insert_Mutation
{
    ObjectPath Path = 1;
    Color NewValue = 2;
    int32 Index = 3;
}

message List_Color_Remove_Mutation
{
    ObjectPath Path = 1;
    Color OldValue = 2;
    int32 Index = 3;
}

message Mutation
{
	oneof mut{
		Boolean_Set_Mutation Boolean_Set_Mutation = 1;
		List_Boolean_Insert_Mutation List_Boolean_Insert_Mutation = 2;
		List_Boolean_Remove_Mutation List_Boolean_Remove_Mutation = 3;
		Integer_Set_Mutation Integer_Set_Mutation = 4;
		List_Integer_Insert_Mutation List_Integer_Insert_Mutation = 5;
		List_Integer_Remove_Mutation List_Integer_Remove_Mutation = 6;
		Vec2i_Set_Mutation Vec2i_Set_Mutation = 7;
		List_Vec2i_Insert_Mutation List_Vec2i_Insert_Mutation = 8;
		List_Vec2i_Remove_Mutation List_Vec2i_Remove_Mutation = 9;
		Terrain_Set_Mutation Terrain_Set_Mutation = 10;
		List_Terrain_Insert_Mutation List_Terrain_Insert_Mutation = 11;
		List_Terrain_Remove_Mutation List_Terrain_Remove_Mutation = 12;
		Color_Set_Mutation Color_Set_Mutation = 13;
		List_Color_Insert_Mutation List_Color_Insert_Mutation = 14;
		List_Color_Remove_Mutation List_Color_Remove_Mutation = 15;
	}
}
